docs: clarify JVM and garbage collection internals